robo_orchard/lab/0.2.0/_sources/autoapi/robo_orchard_lab/dataset/lmdb/base_lmdb_dataset/index.rst.txt
base_lmdb_dataset
=================

.. py:module:: robo_orchard_lab.dataset.lmdb.base_lmdb_dataset


Attributes
----------

.. autoapisummary::

   robo_orchard_lab.dataset.lmdb.base_lmdb_dataset.logger


Classes
-------

.. autoapisummary::

   robo_orchard_lab.dataset.lmdb.base_lmdb_dataset.BaseIndexData
   robo_orchard_lab.dataset.lmdb.base_lmdb_dataset.BaseLmdbManipulationDataset
   robo_orchard_lab.dataset.lmdb.base_lmdb_dataset.BaseLmdbManipulationDataPacker


Module Contents
---------------

.. py:data:: logger

.. py:class:: BaseIndexData(/, **data: Any)

   Bases: :py:obj:`pydantic.BaseModel`


   Base data structure for indexing simulation or task-related information.


   .. py:attribute:: uuid
      :type:  str


   .. py:attribute:: task_name
      :type:  str
      :value: None



   .. py:attribute:: num_steps
      :type:  int


   .. py:attribute:: user
      :type:  Optional[str]
      :value: None



   .. py:attribute:: embodiment
      :type:  Optional[str]
      :value: None



   .. py:attribute:: date
      :type:  Optional[str]
      :value: None



   .. py:attribute:: simulation
      :type:  bool
      :value: False



   .. py:attribute:: model_config

      Configuration for the model, should be a dictionary conforming to [`ConfigDict`][pydantic.config.ConfigDict].


.. py:class:: BaseLmdbManipulationDataset(paths: Union[str, List[str]], transforms: Optional[List[Callable]] = None, interval: Optional[int] = None, load_image: bool = True, load_depth: bool = True, task_names: Optional[Union[str, List[str]]] = None, num_episode: Optional[int] = None, lazy_init: bool = False, encoding_mode: str = 'utf-8')

   Bases: :py:obj:`torch.utils.data.Dataset`


   A dataset class for manipulation tasks stored in LMDB format.

   The dataset is structured into four fundamental components:
   `index`, `meta`, `depth`, and `image`.

   .. note::

       **index** and **meta** are organized by episode as the basic unit.

       **depth** and **image** are stored by frame as the basic unit.

   An example:

   .. code-block:: text

       - index:
           - `episode_id`: `BaseIndexData`.
       - meta:
           - `{uuid}/meta_data`: General metadata about the task.
           - `{uuid}/camera_names`: List of camera names used in the task.
           - `{uuid}/observation/joint_positions`: [num_steps * num_joint]
       - image:
           - `{uuid}/{cam_name}/{step_idx}`: image_buffer
       - depth:
           - `{uuid}/{cam_name}/{step_idx}`: depth_buffer

   :param paths: Path(s) to the LMDB database(s). Can be
                 a single path or a list of paths.
   :type paths: Union[str, List[str]]
   :param transforms: A function/transform to apply to
                      the data samples. Can also be a sequence of transforms.
                      Default: None.
   :type transforms: Optional[List[Callable]]
   :param interval: Interval between steps to sample.
                    Default: None
   :type interval: Optional[int]
   :param load_image: Whether to load image data. Default: True.
   :type load_image: bool
   :param load_depth: Whether to load depth data. Default: True.
   :type load_depth: bool
   :param task_names: List of task names to
                      filter by. Default: None.
   :type task_names: Optional[Union[str, List[str]]]
   :param num_episode: Maximum number of episodes to load.
                       Default: None.
   :type num_episode: Optional[int]
   :param lazy_init: If True, initialization is deferred until first
                     access. Default: False.
   :type lazy_init: bool
   :param encoding_mode: Encoding mode of keys from LMDB.
                         Default: "utf-8".
   :type encoding_mode: str


   .. py:attribute:: paths


   .. py:attribute:: transforms
      :value: []



   .. py:attribute:: interval
      :value: None



   .. py:attribute:: load_image
      :value: True



   .. py:attribute:: load_depth
      :value: True



   .. py:attribute:: task_names
      :value: None



   .. py:attribute:: num_episode_
      :value: None



   .. py:attribute:: encoding_mode
      :value: 'utf-8'



   .. py:attribute:: initialized
      :value: False



   .. py:method:: visualize(episode_index, output_path='./vis_data')
      :abstractmethod:



.. py:class:: BaseLmdbManipulationDataPacker(input_path, output_path, commit_step=500, **kwargs)

   Bases: :py:obj:`object`


   .. py:attribute:: input_path


   .. py:attribute:: output_path


   .. py:attribute:: commit_step
      :value: 500



   .. py:attribute:: lmdb_kwargs


   .. py:method:: close()


   .. py:method:: write_index(index: Union[int, str], index_data: dict)


